# hpc-template

./: .gitignore  CMakeLists.txt  README.md  config_cmake.h.in
doc/developer/: Makefile  make.bat
doc/developer/source/: conf.py  index.rst
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/cuda-util/: CMakeLists.txt  CUDAEnvironment.cpp  CUDAEnvironment.h  CUDAEnvironmentWriter.cpp  CUDAEnvironmentWriter.h  CUDAProperties.cpp  CUDAProperties.h
test/: CMakeLists.txt
test/system/: CMakeLists.txt  run_tests.py
test/unit/: CMakeLists.txt
test/unit/cuda-util/: CMakeLists.txt  CudaEnvironmentTest.cpp
test/unit/cxx11/: Cxx11AutoTest.cpp  Cxx11InitializerTest.cpp  Cxx11StringTest.cpp
